--- a/css/avis.css
+++ b/css/avis.css
@@ -1,87 +1,56 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: Times, "Times New Roman", Georgia, serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: Times, "Times New Roman", Georgia, serif;
 }
 
 #avis {
-    position: relative;
-    margin: 2% auto;
-    width: 95%;
-    height: 200px;
-    box-shadow: 0 7px 25px rgba(0, 0, 0, 0.10);
+  width: 95%;
+  margin: 2% auto;
+  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
+  border-radius: 20px;
+  padding: 2%;
 }
-
-#avis ion-icon {
-    padding: 2%;
-    margin: 1%;
-    color: white;
-}
-
-#avis a {
-    position: absolute;
-    text-align: center;
-    width: 100%;
-    text-decoration: none;
-    transition: all 500ms;
-    color: black;
-}
-
-#avis a:hover {
-    transition: all 500ms;
-    color: pink;
-    cursor: pointer;
-}
-
-.suivre {
-    cursor: pointer;
-    position: absolute;
-    width: fit-content;
-    top: 0;
-    right: 0;
-    margin-top: 1%;
-    margin-right: 1%;
-    background-color: pink;
-    border-radius: 50%;
-    transition: all 500ms;
-}
-
-.prec {
-    cursor: pointer;
-    position: absolute;
-    width: fit-content;
-    top: 0;
-    left: 0;
-    margin-top: 1%;
-    margin-right: 1%;
-    background-color: pink;
-    border-radius: 50%;
-    transition: all 500ms;
-}
-
-.suivre:hover {
-    transform: scale(1.2);
-    transition: all 500ms;
-    box-shadow: 0 7px 25px rgba(0, 0, 0, 0.10);
-}
-
-.prec:hover {
-    transform: scale(1.2);
-    transition: all 500ms;
-    box-shadow: 0 7px 25px rgba(0, 0, 0, 0.10);
-}
-
 .slider {
-    position: relative;
-    top: 20px;
-    width: 5000px;
-    height: 150px;
-    overflow: hidden;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.comm {
+  flex-grow: 2;
+}
+.suivre,
+.prec {
+  color: pink;
+  transition: all 0.8s ease-in-out;
+}
+.suivre:hover,
+.prec:hover {
+  background: pink;
+  border-radius: 50%;
+  color: white;
+  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
+  transform: scale(1.2);
+  transition: all 0.8s ease-in-out;
 }
 
-.commentaires p {
-    display: block;
-    float: left;
-    padding: 0 10px;
+#write_com {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-top: 1%;
+}
+
+#write_com a {
+  text-decoration: none;
+  color: pink;
+  transition: all 0.5s ease-in-out;
+}
+
+#write_com a:hover {
+  transform: scale(1.1);
+  transition: all 0.5s ease-in-out;
+  text-decoration: underline;
 }
