--- a/css/card.css
+++ b/css/card.css
@@ -154,13 +154,33 @@ input[type="radio"].demo5:checked+label::after {
     background-color: pink;
 }
 
-#fiole {
-    width: 45%;
-    float: left;
-    ;
+#direction {
+    display: inline-flex;
+    width: 100%;
+    justify-content: center;
+    margin-bottom: 1%;
+    gap: 15px;
 }
 
-#brume {
-    width: 45%;
-    margin-left: 55%;
+#fio,
+#bru {
+    border-radius: 50%;
+    padding: 0.5%;
+    background-color: pink;
+    color: white;
+    border: none;
+    transition: all 0.5s ease-in-out;
+}
+
+#fio img,
+#bru img {
+    width: 50px;
+    height: 50px;
+    transform: scale(1.0);
+}
+
+#bru:hover,
+#fio:hover {
+    transform: scale(1.2);
+    transition: all 0.5s ease-in-out;
 }
