--- a/css/produit.css
+++ b/css/produit.css
@@ -8,6 +8,21 @@
 body {
     overflow-y: scroll;
 }
+body::-webkit-scrollbar {
+    width: 12px;
+}
+
+body::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background: pink;
+}
+
+body::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+    background: white;
+}
 
 .article {
     margin: 2% auto;
