--- a/css/commentaire.css
+++ b/css/commentaire.css
@@ -1,44 +1,74 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: Times, "Times New Roman", Georgia, serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: Times, "Times New Roman", Georgia, serif;
 }
-
+#vosComs {
+  width: 95%;
+  margin: 2% auto;
+  display: flex;
+  justify-content: space-around;
+  gap: 30px 50px;
+  flex-wrap: wrap;
+}
+#vosComs > div {
+  width: 20%;
+  padding: 1%;
+  border: 1px solid pink;
+  border-radius: 20px;
+  box-shadow: 10px 7px 11px 5px rgb(0 0 0 / 15%);
+}
+#vosComs h2 {
+  padding: 1%;
+  flex-grow:2 ;
+}
+#vosComs img {
+  width: 30%;
+  height: 80px;
+}
+#perso {
+  display: flex;
+  justify-content: space-between;
+}
+#vosComs > div > p:last-child {
+  display: flex;
+  justify-content: flex-end;
+}
 #commentaires {
-    margin: 2% auto;
-    width: 90%;
-    box-shadow: 0 7px 25px rgba(0, 0, 0, 0.15);
-    border-radius: 40px;
-    padding-left: 1%;
-    padding-top: 1%;
+  margin: 2% auto;
+  width: 90%;
+  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.15);
+  border-radius: 40px;
+  padding-left: 1%;
+  padding-top: 1%;
 }
 
 #commentaires button {
-    margin-top: 1.5%;
-    margin-bottom: 1.5%;
+  margin-top: 1.5%;
+  margin-bottom: 1.5%;
 }
 
 textarea {
-    margin-top: 1%;
+  margin-top: 1%;
 }
 
 .rating {
-    direction: rtl;
-    max-width: 32%;
+  direction: rtl;
+  max-width: 32%;
 }
 
 .rating a {
-    color: #aaa;
-    text-decoration: none;
-    font-size: 3em;
-    transition: color .4s;
+  color: #aaa;
+  text-decoration: none;
+  font-size: 3em;
+  transition: color 0.4s;
 }
 
 .rating a:hover,
 .rating a:focus,
-.rating a:hover~a,
-.rating a:focus~a {
-    color: gold;
-    cursor: pointer;
+.rating a:hover ~ a,
+.rating a:focus ~ a {
+  color: gold;
+  cursor: pointer;
 }
