--- a/css/produit.css
+++ b/css/produit.css
@@ -1,32 +1,32 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: Times, "Times New Roman", Georgia, serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: Times, "Times New Roman", Georgia, serif;
 }
 
 body {
-    overflow-y: scroll;
+  overflow-y: scroll;
 }
 body::-webkit-scrollbar {
-    width: 12px;
+  width: 12px;
 }
 
 body::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    border-radius: 10px;
-    background: pink;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background: pink;
 }
 
 body::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
-    background: white;
+  border-radius: 10px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+  background: white;
 }
 
 .article {
-    margin: 2% auto;
-    width: 90%;
+  margin: 2% auto;
+  width: 90%;
 }
 
 #bougie,
@@ -36,16 +36,16 @@ body::-webkit-scrollbar-thumb {
 #brume,
 #resine,
 #coffret {
-    background-color: pink;
-    box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
-    color: white;
-    text-align: center;
-    padding: 1%;
-    font-size: 10px;
-    transition: transform 0.5s;
-    display: inline-block;
-    margin-right: 15px;
-    border-radius: 50%;
+  background-color: pink;
+  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
+  color: white;
+  text-align: center;
+  padding: 1%;
+  font-size: 10px;
+  transition: transform 0.5s;
+  display: inline-block;
+  margin-right: 15px;
+  border-radius: 50%;
 }
 
 #bougie:hover,
@@ -55,13 +55,13 @@ body::-webkit-scrollbar-thumb {
 #brume:hover,
 #resine:hover,
 #coffret:hover {
-    transform: scale(1.1);
-    transition: transform 0.5s;
-    cursor: pointer;
+  transform: scale(1.1);
+  transition: transform 0.5s;
+  cursor: pointer;
 }
 
 hr {
-    border: 1px solid rgba(230, 84, 109, 0.288);
+  border: 1px solid rgba(230, 84, 109, 0.288);
 }
 
 .bougie,
@@ -71,83 +71,97 @@ hr {
 .brume,
 .resine,
 .coffret {
-    margin: 2% auto;
-    width: 90%;
-    box-shadow: 0 7px 25px rgba(0, 0, 0, 0.15);
-    border-radius: 40px;
+  margin: 2% auto;
+  width: 90%;
+  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.15);
+  border-radius: 40px;
 }
 
 .card {
-    border: 2px solid pink;
-    padding: 1%;
-    text-align: center;
-    border-radius: 10%;
-    width: 19%;
-    height: fit-content;
-    display: inline-block;
-    margin: 2%;
-    box-shadow: 0 7px 25px rgba(0, 0, 0, 0.10);
+  border: 2px solid pink;
+  padding: 1%;
+  text-align: center;
+  border-radius: 10%;
+  width: 19%;
+  height: fit-content;
+  display: inline-block;
+  margin: 2%;
+  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.1);
 }
 
 .card_img {
-    width: 100%;
+  width: 100%;
 }
 
 img {
-    margin: 0 auto;
-    margin-top: 3%;
-    margin-bottom: 3%;
-    width: 200px;
-    height: 200px;
+  margin: 0 auto;
+  margin-top: 3%;
+  margin-bottom: 3%;
+  width: 200px;
+  height: 200px;
 }
 
 .card input {
-    text-align: center;
-    width: 100%;
-    margin-top: 2%;
-    color: white;
-    background-color: pink;
-    height: 25px;
+  text-align: center;
+  width: 100%;
+  margin-top: 2%;
+  color: white;
+  background-color: pink;
+  height: 25px;
 }
 
 .card ion-icon {
-    padding: 2%;
-    margin: 1%;
-    color: white;
-    background-color: pink;
-    border-radius: 50%;
+  padding: 2%;
+  margin: 1%;
+  color: white;
+  background-color: pink;
+  border-radius: 50%;
 }
 
 .card ion-icon:hover {
-    padding: 2%;
-    margin: 1%;
-    color: pink;
-    background-color: white;
+  padding: 2%;
+  margin: 1%;
+  color: pink;
+  background-color: white;
 }
 
 .sur {
-    color: white;
+  color: white;
 }
 
 .article img {
-    width: 50px;
-    height: 50px;
+  width: 50px;
+  height: 50px;
+}
+
+.add {
+  float: right;
+  margin-top: 1%;
+  margin-right: 1%;
+  border-radius: 50%;
+  background-color: pink;
+  transition: all 500ms;
+}
+
+.add ion-icon {
+  color: white;
+}
+
+.add:hover {
+  transform: scale(1.2);
+  transition: all 500ms;
+}
+
+.task {
+  display: flex;
+  justify-content: space-around;
 }
 
 button {
-    float: right;
-    margin-top: 1%;
-    margin-right: 1%;
-    border-radius: 50%;
-    background-color: pink;
-    transition: all 500ms;
+  border: none;
+  background: transparent;
 }
 
-button ion-icon {
-    color: white;
-}
-
-button:hover {
-    transform: scale(1.2);
-    transition: all 500ms;
+#delete {
+  padding: 10%;
 }
