--- a/css/card.css
+++ b/css/card.css
@@ -1,186 +1,212 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: Times, "Times New Roman", Georgia, serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: Times, "Times New Roman", Georgia, serif;
 }
 
 body::-webkit-scrollbar {
-    width: 12px;
+  width: 12px;
 }
 
 body::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    border-radius: 10px;
-    background: pink;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 10px;
+  background: pink;
 }
 
 body::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
-    background: white;
+  border-radius: 10px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+  background: white;
 }
 
 .container {
-    margin: 2% auto;
-    width: 90%;
+  display: flex;
+  margin: 0 auto;
+  width: 90%;
+  justify-content: space-around;
+  gap: 50px;
+  flex-wrap: wrap;
 }
 
 h1 {
-    text-align: center;
+  text-align: center;
+}
+.fiole,
+.fondant,
+.brume {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  width: 100%;
+}
+#direction {
+  margin-top: 2%;
+  margin-bottom: 2%;
 }
 
 .card {
-    border: 2px solid pink;
-    padding: 1%;
-    text-align: center;
-    border-radius: 10%;
-    width: 22%;
-    height: fit-content;
-    display: inline-block;
-    margin-left: 2.6%;
-    margin-top: 1%;
-    margin-bottom: 2%;
-    box-shadow: 0 7px 25px rgba(0, 0, 0, 0.10);
+  display: inline-flex;
+  flex-direction: column;
+  border: 2px solid pink;
+  text-align: center;
+  border-radius: 10%;
+  width: 15%;
+  padding: 2%;
+  margin: 2%;
+  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.1);
 }
 
 .card_img {
-    width: 100%;
+  width: 100%;
 }
 
 img {
-    margin: 0 auto;
-    margin-top: 3%;
-    margin-bottom: 3%;
-    width: 200px;
-    height: 200px;
-    transition: transform 0.5s;
+  margin: 0 auto;
+  margin-top: 3%;
+  margin-bottom: 3%;
+  width: 100%;
+  height: 150px;
+  transition: transform 0.5s;
 }
 
 img:hover {
-    transform: scale(1.1);
-    transition: transform 0.5s;
+  transform: scale(1.1);
+  transition: transform 0.5s;
 }
 
 .card input {
-    text-align: center;
-    width: 10%;
-    border: none;
+  text-align: center;
+  width: 10%;
+  border: none;
 }
 
 .moins,
 .plus {
-    border-radius: 50%;
-    color: white;
-    background-color: pink;
-    padding: 3%;
-    transition: transform 0.5s;
+  border-radius: 50%;
+  color: white;
+  background-color: pink;
+  padding: 3%;
+  transition: transform 0.5s;
 }
 
 .moins:hover,
 .plus:hover {
-    transform: scale(1.2);
-    transition: transform 0.5s;
-    cursor: pointer;
+  transform: scale(1.2);
+  transition: transform 0.5s;
+  cursor: pointer;
 }
 
 .add {
-    background-color: pink;
-    color: white;
-    padding: 2%;
-    margin-top: 2%;
-    width: 100%;
-    transition: transform 0.5s;
+  background-color: pink;
+  color: white;
+  padding: 2%;
+  margin-top: 2%;
+  width: 100%;
+  transition: transform 0.5s;
 }
 
 .add:hover {
-    transform: scale(1.2);
-    transition: transform 0.5s;
-    cursor: pointer;
+  transform: scale(1.2);
+  transition: transform 0.5s;
+  cursor: pointer;
 }
 
 .card select {
-    margin: 2%;
-    float: left;
-    width: fit-content;
-    padding: 2%;
-    text-align: center;
-    background-color: pink !important;
-    color: white !important;
+  margin: 2%;
+  float: left;
+  width: fit-content;
+  padding: 2%;
+  text-align: center;
+  background-color: pink !important;
+  color: white !important;
 }
 
 .card p {
-    float: right;
+  float: right;
 }
 
 option {
-    background-color: pink !important;
-    color: white !important;
+  background-color: pink !important;
+  color: white !important;
 }
 
 option:hover {
-    background-color: white !important;
-    color: pink !important;
+  background-color: white !important;
+  color: pink !important;
 }
 
 input[type="radio"].demo5 {
-    display: none;
+  display: none;
 }
 
-input[type="radio"].demo5+label {
-    position: relative;
-    padding-left: 1.3rem;
+input[type="radio"].demo5 + label {
+  position: relative;
+  padding-left: 1.3rem;
 }
 
-input[type="radio"].demo5+label::before,
-input[type="radio"].demo5+label::after {
-    display: block;
-    position: absolute;
-    box-sizing: border-box;
-    bottom: 0;
-    left: 0;
-    content: '';
-    width: 1rem;
-    height: 1rem;
-    border-radius: 1rem;
+input[type="radio"].demo5 + label::before,
+input[type="radio"].demo5 + label::after {
+  display: block;
+  position: absolute;
+  box-sizing: border-box;
+  bottom: 0;
+  left: 0;
+  content: "";
+  width: 1rem;
+  height: 1rem;
+  border-radius: 1rem;
 }
 
-input[type="radio"].demo5+label::before {
-    border: 1px solid pink;
-    background-color: #eee;
+input[type="radio"].demo5 + label::before {
+  border: 1px solid pink;
+  background-color: #eee;
 }
 
-input[type="radio"].demo5:checked+label::after {
-    background-color: pink;
+input[type="radio"].demo5:checked + label::after {
+  background-color: pink;
 }
 
 #direction {
-    display: inline-flex;
-    width: 100%;
-    justify-content: center;
-    margin-bottom: 1%;
-    gap: 15px;
+  display: inline-flex;
+  width: 100%;
+  justify-content: center;
+  margin-bottom: 1%;
+  gap: 15px;
 }
 
 #fio,
 #bru {
-    border-radius: 50%;
-    padding: 0.5%;
-    background-color: pink;
-    color: white;
-    border: none;
-    transition: all 0.5s ease-in-out;
+  border-radius: 50%;
+  padding: 0.5%;
+  background-color: pink;
+  color: white;
+  border: none;
+  transition: all 0.5s ease-in-out;
 }
 
 #fio img,
 #bru img {
-    width: 50px;
-    height: 50px;
-    transform: scale(1.0);
+  width: 50px;
+  height: 50px;
+  transform: scale(1);
 }
 
 #bru:hover,
 #fio:hover {
-    transform: scale(1.2);
-    transition: all 0.5s ease-in-out;
+  transform: scale(1.2);
+  transition: all 0.5s ease-in-out;
+}
+
+@media (max-width: 1200px) {
+  .card {
+    width: 40%;
+  }
+}
+
+@media (max-width: 750px) {
+  .card {
+    width: 60%;
+  }
 }
