--- a/css/commentaire.css
+++ b/css/commentaire.css
@@ -18,6 +18,11 @@
   border: 1px solid pink;
   border-radius: 20px;
   box-shadow: 10px 7px 11px 5px rgb(0 0 0 / 15%);
+  transition: all 0.8s ease-in-out;
+}
+#vosComs > div:hover{
+  transform: scale(1.1);
+  transition: all 0.8s ease-in-out;
 }
 #vosComs h2 {
   padding: 1%;
