--- a/css/header.css
+++ b/css/header.css
@@ -4,22 +4,32 @@
   box-sizing: border-box;
   font-family: Times, "Times New Roman", Georgia, serif;
 }
+header {
+  position: sticky;
+  top: 0;
+  z-index: 8;
+}
 
 header .main ul {
   width: 100%;
-  height: 180px;
   background-color: pink;
   display: inline-flex;
-  justify-content: space-between;
+  justify-content: space-around;
   text-align: center;
+  align-items: center;
+  gap: 50px;
 }
 
 header img {
   width: 250px;
   height: 100px;
 }
+#mid {
+  width: fit-content;
+}
 
 header li {
+  width: 100%;
   padding: 20px;
   list-style-type: none;
   color: white;
@@ -58,4 +68,27 @@ header a {
   background-color: rgba(230, 84, 109, 0.288);
   box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
   border-radius: 20px;
+}
+
+@media (max-width: 1400px) {
+  #mid {
+    order: 1;
+  }
+  header {
+    width: 100%;
+  }
+  header .main ul {
+    flex-direction: column;
+    gap: 0;
+    align-items: flex-start;
+  }
+  header .main ul div {
+    display: none;
+  }
+}
+
+@media (max-width: 967px) {
+}
+
+@media (max-width: 740px) {
 }
