--- a/css/avis.css
+++ b/css/avis.css
@@ -5,13 +5,14 @@
   font-family: Times, "Times New Roman", Georgia, serif;
 }
 
-#avis {
+.slideshow-container {
   width: 95%;
   margin: 2% auto;
   box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
   border-radius: 20px;
   padding: 2%;
 }
+
 .slider {
   display: flex;
   justify-content: space-between;
@@ -62,8 +63,8 @@
 #perso h2 {
   min-width: 25%;
 }
-
-.commentaires {
+.mySlides {
+  display: none;
   display: flex;
   flex-direction: column;
   width: 50%;
@@ -76,11 +77,11 @@
 .fp {
   font-size: 1.5rem;
 }
-.commentaires img {
+.mySlides img {
   width: fit-content;
   height: 80px;
 }
 
-.commentaires > p:last-child {
+.mySlides > p:last-child {
   text-align: right;
 }
