--- a/css/avis.css
+++ b/css/avis.css
@@ -53,6 +53,7 @@
   display: flex;
   flex-direction: column;
   width: 50%;
+  height: 280px;
   margin: 0 auto;
   border: 1px solid rgba(230, 84, 109, 0.288);
   box-shadow: 0 7px 25px rgb(0 0 0 / 20%);
