--- a/css/infos.css
+++ b/css/infos.css
@@ -1,6 +1,22 @@
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: Times, "Times New Roman", Georgia, serif;
-  }
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: Times, "Times New Roman", Georgia, serif;
+}
+.navigation {
+  margin: top 2%;
+  margin-bottom: 2%;
+  padding: 2%;
+}
+.navigation p {
+  color: pink;
+} span {
+  text-decoration: underline;
+  font-weight: bold;
+}
+
+.navigation a {
+  text-decoration: none;
+  color: pink;
+}
