--- a/css/sur_footer.css
+++ b/css/sur_footer.css
@@ -15,7 +15,7 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 15%;
+  width: fit-content;
   padding: 1%;
   margin: 2%;
   transition: all 0.8s ease-in-out;
