--- a/css/card.css
+++ b/css/card.css
@@ -18,6 +18,12 @@
 h1 {
   text-align: center;
 }
+.mess{
+  width: 50%;
+  margin: 2% auto;
+  text-align: center;
+  font-size: large;
+}
 .fiole,
 .fondant,
 .brume {
@@ -43,22 +49,21 @@ h1 {
   box-shadow: 0 7px 25px rgba(0, 0, 0, 0.1);
 }
 
-.card_img {
-  width: 100%;
-}
-
-img {
+.card img {
   margin: 0 auto;
   margin-top: 3%;
   margin-bottom: 3%;
   width: 100%;
   height: 150px;
-  transition: transform 0.5s;
+  transition: transform 0.8s;
+  border-radius:15px;
 }
 
-img:hover {
+
+.card img:hover {
   transform: scale(1.1);
-  transition: transform 0.5s;
+  transition: transform 0.8s;
+  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.25);
 }
 
 .card input {
