--- a/css/infos.css
+++ b/css/infos.css
@@ -5,13 +5,13 @@
   font-family: Times, "Times New Roman", Georgia, serif;
 }
 .navigation {
-  margin: top 2%;
-  margin-bottom: 2%;
+  margin-top: 2%;
   padding: 2%;
 }
 .navigation p {
   color: pink;
-} span {
+}
+span {
   text-decoration: underline;
   font-weight: bold;
 }
@@ -19,4 +19,13 @@
 .navigation a {
   text-decoration: none;
   color: pink;
+}
+
+.container {
+  display: flex;
+  width: 95%;
+  margin:  auto;
+  box-shadow: 0 7px 25px rgb(0 0 0 / 20%);
+  border-radius:10px;
+  height: 1000px;
 }
