--- a/css/sur_footer.css
+++ b/css/sur_footer.css
@@ -28,7 +28,7 @@ section {
   opacity: 0.5;
 }
 .infos_sur ion-icon {
-  color: pink;
+  color: #f6d1d8;
   margin: 2%;
   font-size: 30px;
   font-weight: bold;
