--- a/css/avis.css
+++ b/css/avis.css
@@ -5,6 +5,7 @@
   font-family: Times, "Times New Roman", Georgia, serif;
 }
 
+
 .slideshow-container {
   width: 100%;
   border-radius: 20px;
@@ -32,7 +33,7 @@
 
 #write_com a {
   text-decoration: none;
-  color: pink;
+  color: #f6d1d8;
   transition: all 0.5s ease-in-out;
 }
 
@@ -55,7 +56,7 @@
   width: 50%;
   height: 280px;
   margin: 0 auto;
-  border: 1px solid rgba(230, 84, 109, 0.288);
+  border: 1px solid #ffefff;
   box-shadow: 0 7px 25px rgb(0 0 0 / 20%);
   border-radius: 20px;
   padding: 2%;
