--- a/css/card.css
+++ b/css/card.css
@@ -4,7 +4,9 @@
   box-sizing: border-box;
   font-family: Times, "Times New Roman", Georgia, serif;
 }
-
+body {
+  background: whitesmoke;
+}
 
 .container {
   display: flex;
@@ -18,7 +20,7 @@
 h1 {
   text-align: center;
 }
-.mess{
+.mess {
   width: 50%;
   margin: 2% auto;
   text-align: center;
@@ -40,7 +42,7 @@ h1 {
 .card {
   display: inline-flex;
   flex-direction: column;
-  border: 2px solid pink;
+  border: 2px solid #f6d1d8;
   text-align: center;
   border-radius: 10%;
   width: 15%;
@@ -56,9 +58,8 @@ h1 {
   width: 100%;
   height: 150px;
   transition: transform 0.8s;
-  border-radius:15px;
+  border-radius: 15px;
 }
-
 
 .card img:hover {
   transform: scale(1.1);
@@ -76,7 +77,7 @@ h1 {
 .plus {
   border-radius: 50%;
   color: white;
-  background-color: pink;
+  background-color: #f6d1d8;
   padding: 3%;
   transition: transform 0.5s;
 }
@@ -89,7 +90,7 @@ h1 {
 }
 
 .add {
-  background-color: pink;
+  background-color: #f6d1d8;
   color: white;
   padding: 2%;
   margin-top: 2%;
@@ -109,7 +110,7 @@ h1 {
   width: fit-content;
   padding: 2%;
   text-align: center;
-  background-color: pink !important;
+  background-color: #f6d1d8 !important;
   color: white !important;
 }
 
@@ -118,13 +119,13 @@ h1 {
 }
 
 option {
-  background-color: pink !important;
+  background-color: #f6d1d8 !important;
   color: white !important;
 }
 
 option:hover {
   background-color: white !important;
-  color: pink !important;
+  color: #f6d1d8 !important;
 }
 
 input[type="radio"].demo5 {
@@ -150,12 +151,12 @@ input[type="radio"].demo5 + label::after {
 }
 
 input[type="radio"].demo5 + label::before {
-  border: 1px solid pink;
+  border: 1px solid #f6d1d8;
   background-color: #eee;
 }
 
 input[type="radio"].demo5:checked + label::after {
-  background-color: pink;
+  background-color: #f6d1d8;
 }
 
 #direction {
@@ -170,7 +171,7 @@ input[type="radio"].demo5:checked + label::after {
 #bru {
   border-radius: 50%;
   padding: 0.5%;
-  background-color: pink;
+  background-color: #f6d1d8;
   color: white;
   border: none;
   transition: all 0.5s ease-in-out;
@@ -189,7 +190,7 @@ input[type="radio"].demo5:checked + label::after {
   transition: all 0.5s ease-in-out;
 }
 
-@media (max-width:  991px) {
+@media (max-width: 991px) {
   .card {
     width: 40%;
   }
