--- a/css/client.css
+++ b/css/client.css
@@ -11,7 +11,7 @@ body::-webkit-scrollbar {
 body::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
-  background: pink;
+  background: #f6d1d8;
 }
 
 body::-webkit-scrollbar-thumb {
@@ -29,7 +29,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 #client thead {
-  border-bottom: 3px solid pink;
+  border-bottom: 3px solid #f6d1d8;
 }
 
 #client thead td {
@@ -61,7 +61,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 #client tbody tr:hover {
-  background-color: pink;
+  background-color: #f6d1d8;
   color: white;
 }
 
