--- a/css/login.css
+++ b/css/login.css
@@ -4,6 +4,9 @@
   box-sizing: border-box;
   font-family: Times, "Times New Roman", Georgia, serif;
 }
+body {
+  background: whitesmoke;
+}
 
 .container {
   width: 100%;
@@ -18,7 +21,7 @@
 #conn,
 #insc {
   border-radius: 8%;
-  border: 3px solid pink;
+  border: 3px solid #f6d1d8;
   text-align: center;
   width: 40%;
   height: 590px;
@@ -50,16 +53,40 @@ table {
 }
 
 .send {
-  border: none;
-  background-color: pink;
+  background-color: #f6d1d8;
   color: white;
   font-size: 20px;
   width: fit-content(10px);
-  padding: 1%;
   transition: 0.5s;
+  position: relative;
+  color: white;
+  text-decoration: none;
+  display: inline-block;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  border: 2px solid white;
+  border-radius: 1000px;
+  padding: 10px 20px;
+  box-shadow: 0 2px 5px 0 rgba(3, 6, 26, 0.15);
+  transition: 0.5s all ease-in-out;
 }
-
 .send:hover {
   transform: scale(1.1);
   transition: 0.5s;
+  cursor: pointer;
+  background: white;
+  color: #1f4141;
+  animation: none;
+  animation-play-state: paused;
 }
+.send-wiggle {
+  animation: pulse 2s infinite 3s cubic-bezier(0.25, 0, 0, 1);
+  box-shadow: 0 0 0 0 #f6d1d8;
+}
+@keyframes pulse {
+  to {
+    box-shadow: 0 0 0 18px rgba(255, 255, 255, 0);
+  }
+}
+
+
