--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,9 @@
   box-sizing: border-box;
   font-family: Times, "Times New Roman", Georgia, serif;
 }
-
+body {
+  background: whitesmoke;
+}
 .infos {
   display: flex;
   justify-content: space-around;
@@ -27,17 +29,81 @@
   display: flex;
   width: 100%;
   box-shadow: 0 7px 25px rgb(0 0 0 / 20%);
-  border-radius:8px;
+  border-radius: 8px;
 }
 #preText {
   display: flex;
-  align-items: center;
+  flex-direction: column;
+  justify-content: end;
   width: 40%;
   height: 500px;
   padding: 2%;
   text-align: justify;
   font-size: medium;
+  background: linear-gradient(160deg, #f6d1d8 0%, white 100%);
 }
+.button-container {
+  margin: 60px auto 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.button {
+  position: relative;
+  color: white;
+  text-decoration: none;
+  display: inline-block;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  background: #f6d1d8;
+  border-radius: 1000px;
+  padding: 10px 20px;
+  margin: 40px;
+  box-shadow: 0 2px 5px 0 rgba(3, 6, 26, 0.15);
+  transition: 0.5s all ease-in-out;
+}
+.button:hover {
+  cursor: pointer;
+  background: white;
+  color: #f6d1d8;
+  animation: none;
+  animation-play-state: paused;
+  border: 2px solid #f6d1d8;
+}
+
+.button-wiggle {
+  animation: wiggle 4s 2s infinite;
+}
+@keyframes wiggle {
+  5%,
+  50% {
+    transform: scale(1);
+  }
+  10% {
+    transform: scale(0.9);
+  }
+  15% {
+    transform: scale(1.15);
+  }
+  20% {
+    transform: scale(1.15) rotate(-5deg);
+  }
+  25% {
+    transform: scale(1.15) rotate(5deg);
+  }
+  30% {
+    transform: scale(1.15) rotate(-3deg);
+  }
+  35% {
+    transform: scale(1.15) rotate(2deg);
+  }
+  40% {
+    transform: scale(1.15) rotate(0);
+  }
+}
+
 #preImg {
   width: 70%;
 }
@@ -48,7 +114,7 @@
 .box {
   margin: 1% auto;
   padding: 2%;
-  border: 3px solid pink;
+  border: 3px solid #f6d1d8;
   border-radius: 5%;
   width: 100%;
   cursor: pointer;
@@ -100,7 +166,7 @@
   position: relative;
   font-weight: 500;
   font-size: 2.5em;
-  color: pink;
+  color: #f6d1d8;
 }
 
 .cardBox .card .cardName {
@@ -115,7 +181,7 @@
 }
 
 .cardBox .card:hover {
-  background-color: pink;
+  background-color: #f6d1d8;
 }
 
 .cardBox .card:hover .numbers,
