--- a/css/mon_compte.css
+++ b/css/mon_compte.css
@@ -4,6 +4,9 @@
   box-sizing: border-box;
   font-family: Times, "Times New Roman", Georgia, serif;
 }
+body {
+  background: whitesmoke;
+}
 
 .container {
   display: flex;
@@ -36,7 +39,7 @@
   transition: 0.5s;
   background-color: white;
   border-radius: 50%;
-  color: pink;
+  color: #f6d1d8;
   box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
   padding: 1%;
 }
@@ -72,14 +75,14 @@ ul a:hover {
   text-align: center;
   box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
   transition: 0.5s;
-  border-right: 2px solid pink;
+  border-right: 2px solid #f6d1d8;
   width: 100%;
   min-width: 100%;
 }
 
 .user li:hover {
   color: white;
-  background-color: pink;
+  background-color: #f6d1d8;
   transform: scale(1.1);
   transition: 0.5s;
   cursor: pointer;
@@ -90,7 +93,7 @@ ul a:hover {
   top: 200px;
   left: 50px;
   border-radius: 50%;
-  background-color: pink;
+  background-color: #f6d1d8;
   border: none;
   padding-top: 1%;
   width: 10%;
@@ -103,14 +106,14 @@ ul a:hover {
 }
 #change ion-icon {
   color: white;
-  background: pink;
+  background: #f6d1d8;
   border-radius: 50%;
   padding: 20%;
   transition: all 0.8s ease-in-out;
 }
 
 #change ion-icon:hover {
-  color: pink;
+  color: #f6d1d8;
   background: white;
   transform: scale(1.1);
   transition: all 0.8s ease-in-out;
@@ -133,13 +136,13 @@ ul a:hover {
 }
 
 li:hover #decon {
-  background-color: pink;
+  background-color: #f6d1d8;
   transition: 0.5s;
 }
 
 .pink {
   color: white;
-  background-color: pink;
+  background-color: #f6d1d8;
 }
 
 .modal {
@@ -149,7 +152,7 @@ li:hover #decon {
 
 #modal_avatar img {
   width: 10%;
-  background-color: pink;
+  background-color: #f6d1d8;
   border-radius: 50%;
   margin: 40px;
 }
@@ -178,7 +181,7 @@ li:hover #decon {
 .content_user .edit_adr2:hover,
 .content_user a:hover,
 #tableau_bord .edit_adr2:hover {
-  text-decoration: underline pink;
+  text-decoration: underline #f6d1d8;
   cursor: pointer;
 }
 
@@ -200,7 +203,7 @@ li:hover #decon {
 /* INFORMATIONS DU COMPTE */
 
 #info_compte h3 {
-  text-decoration: underline pink;
+  text-decoration: underline #f6d1d8;
 }
 
 #info_compte input,
@@ -224,7 +227,7 @@ span {
 }
 
 #info_compte a:hover {
-  text-decoration: underline pink;
+  text-decoration: underline #f6d1d8;
 }
 
 #btn_action {
@@ -237,7 +240,7 @@ span {
 #retour1 {
   text-align: center;
   color: white;
-  background-color: pink;
+  background-color: #f6d1d8;
   width: 150px;
   height: 20px;
   cursor: pointer;
@@ -246,7 +249,7 @@ span {
 #save {
   float: right;
   color: white;
-  background-color: pink;
+  background-color: #f6d1d8;
   width: 150px;
   height: 20px;
   cursor: pointer;
@@ -275,7 +278,7 @@ span {
 }
 
 #carnet_adresse h3 {
-  text-decoration: underline pink;
+  text-decoration: underline #f6d1d8;
 }
 
 #carnet_adresse input {
@@ -297,7 +300,7 @@ span {
 }
 
 #carnet_adresse h4 {
-  background-color: pink;
+  background-color: #f6d1d8;
   color: white;
   border: 1px solid black;
   padding: 2px;
@@ -306,14 +309,14 @@ span {
 }
 
 option {
-  background-color: pink;
+  background-color: #f6d1d8;
   color: white;
 }
 
 #retour2 {
   text-align: center;
   color: white;
-  background-color: pink;
+  background-color: #f6d1d8;
   width: 150px;
   height: 20px;
   cursor: pointer;
@@ -322,7 +325,7 @@ option {
 #save2 {
   float: right;
   color: white;
-  background-color: pink;
+  background-color: #f6d1d8;
   width: 150px;
   height: 20px;
   cursor: pointer;
@@ -338,13 +341,13 @@ option {
 }
 
 #mes_commandes h3 {
-  text-decoration: underline pink;
+  text-decoration: underline #f6d1d8;
 }
 
 #retour3 {
   text-align: center;
   color: white;
-  background-color: pink;
+  background-color: #f6d1d8;
   width: 150px;
   height: 20px;
   cursor: pointer;
@@ -361,7 +364,7 @@ option {
 #retour4 {
   text-align: center;
   color: white;
-  background-color: pink;
+  background-color: #f6d1d8;
   width: 150px;
   height: 20px;
   cursor: pointer;
