--- a/css/produit.css
+++ b/css/produit.css
@@ -15,7 +15,7 @@ body::-webkit-scrollbar {
 body::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
-  background: pink;
+  background: #f6d1d8;
 }
 
 body::-webkit-scrollbar-thumb {
@@ -36,7 +36,7 @@ body::-webkit-scrollbar-thumb {
 #brume,
 #resine,
 #coffret {
-  background-color: pink;
+  background-color: #f6d1d8;
   box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
   color: white;
   text-align: center;
@@ -61,7 +61,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 hr {
-  border: 1px solid rgba(230, 84, 109, 0.288);
+  border: 1px solid #ffefff;
 }
 
 .bougie,
@@ -78,7 +78,7 @@ hr {
 }
 
 .card {
-  border: 2px solid pink;
+  border: 2px solid #f6d1d8;
   padding: 1%;
   text-align: center;
   border-radius: 10%;
@@ -107,7 +107,7 @@ img {
   width: 100%;
   margin-top: 2%;
   color: white;
-  background-color: pink;
+  background-color: #f6d1d8;
   height: 25px;
 }
 
@@ -115,14 +115,14 @@ img {
   padding: 2%;
   margin: 1%;
   color: white;
-  background-color: pink;
+  background-color: #f6d1d8;
   border-radius: 50%;
 }
 
 .card ion-icon:hover {
   padding: 2%;
   margin: 1%;
-  color: pink;
+  color: #f6d1d8;
   background-color: white;
 }
 
@@ -140,7 +140,7 @@ img {
   margin-top: 1%;
   margin-right: 1%;
   border-radius: 50%;
-  background-color: pink;
+  background-color: #f6d1d8;
   transition: all 500ms;
 }
 
@@ -173,7 +173,7 @@ button {
   padding: 10%;
 }
 .envoie {
-  background-color: pink;
+  background-color: #f6d1d8;
   color: white;
   border-radius: 50%;
   padding: 10%;
