--- a/css/card.css
+++ b/css/card.css
@@ -48,7 +48,7 @@ h1 {
   width: 15%;
   padding: 2%;
   margin: 1%;
-  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.1);
+  box-shadow: 9px -12px 6px rgb(0 0 0 / 20%);
 }
 
 .card img {
