--- a/css/contact.css
+++ b/css/contact.css
@@ -93,3 +93,8 @@ body {
   transition: all 0.5s ease-in-out;
   cursor: pointer;
 }
+
+iframe {
+  border-radius: 8px;
+  box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
+}
