--- a/css/commentaire.css
+++ b/css/commentaire.css
@@ -80,3 +80,23 @@ textarea {
   color: gold;
   cursor: pointer;
 }
+
+.container button {
+  width: 10%;
+  margin: 0 auto;
+  padding: 1%;
+  background: #f6d1d8;
+  color: white;
+  border-radius: 8px;
+  border: none;
+  font-weight: bold;
+  font-size: 18px;
+  transition: all 0.5s ease-in-out;
+}
+
+.container button:hover {
+  box-shadow: 9px -5px 6px rgb(0 0 0 / 20%);
+  transform: scale(1.1);
+  transition: all 0.5s ease-in-out;
+  cursor: pointer;
+}
