--- a/css/main.css
+++ b/css/main.css
@@ -195,6 +195,55 @@ body {
   height: 170px;
 }
 
+/* ---------------------------- */
+/* Défilement de droite à gauche */
+.marquee-rtl {
+  overflow: hidden; /* important */
+  width:100%; max-width: 100%; /* A ADAPTER */
+}
+.marquee-rtl > div {
+  display: inline-block; /* important */
+  white-space: nowrap; /* important */
+  animation: defilement-rtl 20s infinite linear; /* défilement */
+  cursor: pointer;
+  padding: 10px 2em 10px 100%;
+}
+.marquee-rtl:hover > div {
+  animation-play-state: paused; /* met en pause le défilement */
+}
+.marquee-rtl > div:first-letter {
+  font-weight: 700;
+  color: #F6d1d8;
+}
+@keyframes defilement-rtl {
+  0% {
+    -webkit-transform: translate(0);
+    transform: translate(0);
+  }
+  100% {
+    -webkit-transform: translate(-100%);
+    transform: translate(-100%);
+  }
+}
+/* ---------------------------- */
+/* texte sur plusieurs lignes automatiquement */
+.marquee-multi-lignes > div { 
+  width:90%; 
+  white-space: normal; /* important */
+}
+
+/* ---------------------------- */
+/* déco */
+h2, p { text-align:center; }
+
+.marquee-rtl {
+  margin: 2em auto;
+}
+.marquee-rtl > div {
+  font-size: 1.5em;
+}
+
+
 @media (max-width: 991px) {
   .cardBox {
     grid-template-columns: repeat(2, 1fr);
