--- a/css/contact.css
+++ b/css/contact.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200&display=swap');
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: Times, "Times New Roman", Georgia, serif;
+  font-family: 'Roboto Slab', serif;
 }
+
 body {
   background: whitesmoke;
 }
@@ -43,11 +45,11 @@ body {
   justify-content: space-between;
   flex-direction: row;
   width: 100%;
-  flex-wrap: wrap;
+
 }
 
 .sndL div {
-  width: 45%;
+  width: fit-content;
   gap: 5%;
   display: flex;
   align-items: center;
