--- a/css/footer.css
+++ b/css/footer.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200&display=swap');
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: Times, "Times New Roman", Georgia, serif;
+  font-family: 'Roboto Slab', serif;
 }
+
 
 footer {
   padding: 20px;
@@ -34,10 +36,7 @@ footer ion-icon {
 footer ul {
   display: inline-table;
   list-style-type: none;
-  margin-top: 10px;
-  margin-right: auto;
-  margin-bottom: 10px;
-  margin-left: auto;
+  margin: 10px auto;
   color: white;
 }
 
@@ -56,7 +55,7 @@ footer a {
 
 footer a:hover {
   text-decoration: underline;
-  color: rgba(230, 84, 108, 0.801);
+  color: grey;
 }
 
 .fb img {
