--- a/css/panel_admin.css
+++ b/css/panel_admin.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200&display=swap');
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: Times, "Times New Roman", Georgia, serif;
+  font-family: 'Roboto Slab', serif;
 }
+
 
 body {
   min-height: 100vh;
